<resources>
    <string name="app_name">Schedule</string>
    <string name="button_auth">Вход</string>
    <string name="button_registr">Регистрация</string>
    <string name="toolbar_account">Account</string>

    <string name="et_name">Имя*</string>
    <string name="et_surname">Фамилия*</string>
    <string name="et_patronymic">Очество*</string>
    <string name="et_username">Идентификатор*</string>
    <string name="et_password">Пароль*</string>
    <string name="btn_registr">Регистрация</string>
    <string name="btn_auth">Авторизация</string>
    <string name="error_nickname">Такой никнейм уже есть, придумайте другой никнейм</string>
    <string name="success">Success</string>
    <string name="lenght_password">"Заполните все поля.У пароля должно быть минимум 8 букв/цифр "</string>
    <string name="empty">Заполните поля</string>
    <string name="failure_auth">Неправильно введен логин или пароль</string>
    <string name="error_connect">Вы не подключенны к интернету, или же повторите запрос</string>
    <string name="button_logout">logout</string>
    <string name="tv_pleaseWait">Пожалуйста!Подождите…</string>
    <string name="btn_assign">Назначить</string>
    <string name="btn_addTeacher">Добавить преподавателя</string>
    <string name="btn_add">Добавить</string>
    <string name="tv_token">Токен действует 1 час.После 1 часа вы не сможете добавлять/изменять.Вам придеться повторно сделать авторизацию</string>
    <string name="error_teachers">Нету этого преподавателя</string>

    <string name="user">Пользователь*</string>
    <string name="teachers_username">Преподаватель*</string>
    <string name="university">Учреждение*</string>
    <string name="groups">Группа*</string>
    <string name="subjectName">Занятие*</string>
    <string name="typeLecture">Тип*</string>
    <string name="lectureRoom">Кабинет*</string>

    <string-array name="array_university">
        <item>Учреждение*</item>
        <item>KHIBS</item>
    </string-array>

    <string-array name="array_groups">
        <item>Группа*</item>
        <item>304-KH-X</item>
        <item>206-KH-CK-X</item>
    </string-array>


    <string-array name="array_subjectName">
        <item>Занятие*</item>
        <item>Администрирование и мониторинг компьютерных систем</item>
        <item>Экономико-математические методы и модели</item>
        <item>Информационный менеджмент и теория принятия решений</item>
        <item>Информационные технологии</item>
        <item>Интеллектуальный анализ данных</item>
        <item>Компьютерные системы и сети</item>
        <item>Бухгалтерский учет</item>
        <item>Высшая математика</item>
        <item>Маркетинг</item>
        <item>Микроэкономика и макроэкономика</item>
    </string-array>

    <string-array name="array_typeLecture">
        <item>Тип*</item>
        <item>Практика</item>
        <item>Лекция</item>
    </string-array>

    <string-array name="array_lectureRoom">
        <item>Кабинет*</item>
        <item>110</item>
        <item>113</item>
        <item>114</item>
        <item>115</item>
        <item>120</item>
        <item>210</item>
        <item>213</item>
        <item>214</item>
        <item>215</item>
        <item>310</item>
        <item>313</item>
        <item>314</item>
        <item>315</item>
        <item>412</item>
        <item>413</item>
        <item>414</item>
        <item>415</item>
    </string-array>

    <string-array name="array_roles">
        <item>Роль*</item>
        <item>ADMIN</item>
        <item>MANAGER</item>
        <item>TEACHER</item>
    </string-array>

    <string name="btn_date">Дата*</string>
    <string name="btn_startTimeLecture">Начало лекции*</string>
    <string name="btn_finishTimeLecture">Назначить Конец лекции*</string>
    <string name="btn_panelControl">Панель управления</string>
    <string name="error_service">Сервер не отвечает</string>
    <string name="btn_clearText">Очистить поля</string>
    <string name="error_teachers_duplicates">Такой преподаватель уже есть в списке</string>
    <string name="incorrect">Выберите правильные данные и время</string>
    <string name="reauth">Время авторизации истекло.Авторизируйтеcь</string>
    <string name="btn_clearData">Очистить</string>
    <string name="toolbar_home">Home</string>
    <string name="toolbar_logout">Logout</string>
    <string name="text_logout">Вы уверены что хотите выйти из учетной записи ?</string>
    <string name="error_lowInternet">Низкая скорость соединения. Повторите запрос !!! </string>
    <string name="btn_adminControl">Панель администратора</string>
    <string name="btn_controlRole">Роль</string>
    <string name="btn_controlUniversities">Учреждение</string>
    <string name="btn_controlFaculty">Факультет</string>
    <string name="btn_controlGroups">Группа</string>
    <string name="et_nameUniversities">Учреждение*</string>
    <string name="et_location">Город*</string>
    <string name="et_address">Адресс*</string>
    <string name="btn_edit">Изменить</string>
    <string name="tv_Manager">Управление:</string>
    <string name="error_university">Институт с таким названием уже есть</string>
    <string name="emptyAndUniversity">Заполните все поля.Выберите правильные данные</string>

    <string name="role">Роль</string>
    <string name="incorrect_roles">Выберите пользователя и роль</string>
    <string name="et_faculty">Факультет*</string>
    <string name="et_group">Группа*</string>
    <string name="faculty">Факультет*</string>
    <string name="time">Конечное время должно быть больше начального</string>
    <string name="error_faculty_duplicate">Такой факультет уже есть в этом учреждение</string>
    <string name="error_group_duplicate">Такая группа уже есть на таком учреждение и факультете</string>
    <string name="btn_lectionStart">Лекция от*:</string>
    <string name="btn_lectionEnd">Лекция до:</string>
    <string name="btn_find">Найти</string>
    <string name="btn_advancedSearch">Расширенный поиск</string>
    <string name="tv_schedule">Расписание</string>

    <string name="emptySchedule">Название учреждение и дата начала лекции (Лекция от:) обязательно</string>
    <string name="error_data">Нету занятий на этот день</string>
    <string name="error_noElement">Вы выбрали не существующую группу или учреждение</string>

    <string name="tv_advancedSearch">Расширенный поиск</string>
    <string name="btn_lecture">Лекция</string>
    <string name="btn_autditore">Аудитория</string>
    <string name="btn_teachers">Преподаватель</string>
    <string name="btn_university">Учреждение</string>


    <string name="tv_search">Поиск</string>
    <string name="et_audithore">Аудитория*</string>
    <string name="emptyScheduleAuditory">Название учреждение,аудитории и дата начала лекции (Лекция от:) обязательно</string>
    <string name="error_noData">Данные не найдены</string>
    <string name="et_typeLecture">Лекция</string>
    <string name="emptyScheduleLection">Название учреждение выбор тип лекции и дата начала лекции (Лекция от:) обязательно</string>
    <string name="btn_lectionTimeStart">Время от*:</string>
    <string name="btn_lectionTimeEnd">Время до:</string>
    <string name="emptyScheduleUniversity">Название учреждение и дата,время начала лекции (Лекция от:) (Время от:) обязательно</string>
    <string name="emptyScheduleTeacher">Заполните все поля и дату начала лекции (Лекция от:) обязательно</string>
    <string name="et_group_required">Группа*</string>
    <string name="et_nameUniversities_required">Учреждение*</string>
    <string name="et_audithore_required">Аудитория*</string>
    <string name="et_surname_required">Фамилия*</string>
    <string name="et_name_required">Имя*</string>
    <string name="et_patronymic_required">Очество*</string>
    <string name="btn_yes">Да</string>
    <string name="btn_no">Нет</string>
    <string name="et_group_no_required">Группа</string>
</resources>
