<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.AdvancedSearchFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textStyle="italic"
                android:text="@string/tv_advancedSearch"
                />
            <Button
                android:id="@+id/btn_autditore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:minWidth="250dp"
                android:maxWidth="250dp"
                android:text="@string/btn_autditore" />

            <Button
                android:id="@+id/btn_lecture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:minWidth="250dp"
                android:maxWidth="250dp"
                android:text="@string/btn_lecture" />
            <Button
                android:id="@+id/btn_teachers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:minWidth="250dp"
                android:maxWidth="250dp"
                android:text="@string/btn_teachers" />

            <Button
                android:id="@+id/btn_university"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:minWidth="250dp"
                android:maxWidth="250dp"
                android:text="@string/btn_university" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>