<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.UniversitiesEditFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="30dp"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/sp_listUniversity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" />

            <EditText
                android:id="@+id/et_nameUniversity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:hint="@string/et_nameUniversities"/>

            <EditText
                android:id="@+id/et_locationUniversity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:hint="@string/et_location"/>

            <EditText
                android:id="@+id/et_addressUniversity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:hint="@string/et_address"/>


            <Button
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:text="@string/btn_edit"
                />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>