<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.TeacherSearchFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:textStyle="italic"
                android:text="@string/tv_search"
                />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/editText_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/et_surname_required">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_surname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="300dp"
                    android:maxWidth="300dp"
                    android:layout_marginBottom="10dp"
                    android:imeOptions="actionNext"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/editText_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/et_name_required">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="300dp"
                    android:maxWidth="300dp"
                    android:layout_marginBottom="10dp"
                    android:imeOptions="actionNext"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/editText_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/et_patronymic_required">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_patronymic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="300dp"
                    android:maxWidth="300dp"
                    android:layout_marginBottom="10dp"
                    android:imeOptions="actionNext"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/editText_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/et_nameUniversities_required">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_university"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="300dp"
                    android:maxWidth="300dp"
                    android:layout_marginBottom="10dp"
                    android:imeOptions="actionDone"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_hintLectionStart"
                    style="@style/editText_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/btn_lectionStart">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="240dp"
                        android:maxWidth="240dp"
                        android:layout_marginBottom="10dp"
                        android:inputType="none"
                        android:enabled="false"
                        android:focusable="false"
                        android:imeOptions="actionDone"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_lectionStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="65dp"
                    android:minWidth="65dp"
                    android:maxHeight="65dp"
                    android:maxWidth="65dp"
                    android:drawableEnd="@drawable/baseline_date_range_24" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_hintLectionEnd"
                    style="@style/editText_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/btn_lectionEnd">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="240dp"
                        android:maxWidth="240dp"
                        android:layout_marginBottom="10dp"
                        android:inputType="none"
                        android:enabled="false"
                        android:focusable="false"
                        android:imeOptions="actionDone"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_lectionEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="65dp"
                    android:minWidth="65dp"
                    android:maxHeight="65dp"
                    android:maxWidth="65dp"
                    android:drawableEnd="@drawable/baseline_date_range_24" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_find"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:minWidth="300dp"
                android:maxWidth="300dp"
                android:text="@string/btn_find" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_schedule"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/schedule_item"
                    />

                <ProgressBar
                    android:id="@+id/pb_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:visibility="invisible"
                    android:minWidth="40dp"
                    android:minHeight="40dp"
                    />

            </FrameLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</layout>